@@ -51,16 +51,18 @@ Summary: AVR libc.
 Name: avr-libc
 Version: %{libc_version}
 Release: 1
-Copyright: BSD
+License: BSD
 Group: Avr/Development/Tools
 URL: http://savannah.gnu.org/projects/avr-libc
 Source0: http://savannah.gnu.org/download/avr-libc/avr-libc-%{version}.tar.gz
 Buildroot: /var/tmp/avr-libc-%{version}-root
 BuildRequires: gzip avr-gcc >= 3.3
 %if %{_with_docs}
-BuildRequires: doxygen >= 1.3.4 tetex
+BuildRequires: doxygen >= 1.3.4 tetex transfig
 %endif
 Requires: avr-gcc >= 3.3
+
+%define ourdocdir %{_docdir}/%{name}-%{version}
 
 %description
 Avr-libc is a C library for developing applications for Atmel AVR
@@ -98,9 +100,25 @@ cd obj-%{_target_platform}
 make prefix=$RPM_BUILD_ROOT%{_prefix} mandir=$RPM_BUILD_ROOT%{_mandir} \
 	infodir=$RPM_BUILD_ROOT%{_infodir} install
 
+# Move/copy files to appropriate directory to workaround the fact that the doc
+# directive will delete files that are already installed.
+cd ..
+%if ! %{_with_docs}
+mkdir -p $RPM_BUILD_ROOT%{ourdocdir}
+%endif
+cp AUTHORS ChangeLog* INSTALL LICENSE NEWS README $RPM_BUILD_ROOT%{ourdocdir}
+cp --parents doc/INSTALL doc/TODO $RPM_BUILD_ROOT%{ourdocdir}
+cp --parents doc/examples/demo/Makefile $RPM_BUILD_ROOT%{ourdocdir}
+cp --parents doc/examples/demo/demo.c $RPM_BUILD_ROOT%{ourdocdir}
+cp --parents doc/examples/demo/demo.fig $RPM_BUILD_ROOT%{ourdocdir}
+
 %if %{_with_docs}
-gzip -9 doc/api/*.ps
-gzip -9 doc/api/*.pdf
+# Try to remove bogus man pages.
+rm -f ${RPM_BUILD_ROOT}%{ourdocdir}/man/man3/*_BUILD_*.3
+gzip -9 ${RPM_BUILD_ROOT}%{ourdocdir}/man/man3/*.3
+%else
+## Don't need man script if we aren't installing man pages.
+rm ${RPM_BUILD_ROOT}%{_bindir}/avr-man
 %endif
 
 %clean
@@ -108,12 +126,14 @@ rm -rf ${RPM_BUILD_ROOT}
 
 %files
 %defattr(-,root,root)
-%doc AUTHORS ChangeLog INSTALL LICENSE NEWS README
-%doc doc/CHANGES.old doc/ChangeLog doc/INSTALL doc/TODO
-%doc doc/avr-libc-reference.html
-#%doc doc/examples/*.c doc/examples/*.h doc/examples/*.s doc/examples/prg
-%doc doc/examples/demo/Makefile doc/examples/demo/demo.c
-%doc doc/examples/demo/demo.fig
+%docdir %{ourdocdir}
+%{ourdocdir}/AUTHORS
+%{ourdocdir}/ChangeLog*
+%{ourdocdir}/INSTALL
+%{ourdocdir}/LICENSE
+%{ourdocdir}/NEWS
+%{ourdocdir}/README
+%{ourdocdir}/doc
 %dir %{_prefix}/avr
 %dir %{_prefix}/avr/lib
 %dir %{_prefix}/avr/lib/avr3
@@ -121,6 +141,7 @@ rm -rf ${RPM_BUILD_ROOT}
 %dir %{_prefix}/avr/lib/avr5
 %dir %{_prefix}/avr/include
 %dir %{_prefix}/avr/include/avr
+%dir %{_prefix}/avr/include/compat
 %{_prefix}/avr/lib/lib*
 %{_prefix}/avr/lib/crt*
 %{_prefix}/avr/lib/avr3/lib*
@@ -131,6 +152,7 @@ rm -rf ${RPM_BUILD_ROOT}
 %{_prefix}/avr/lib/avr5/crt*
 %{_prefix}/avr/include/*.h
 %{_prefix}/avr/include/avr/*.h
+%{_prefix}/avr/include/compat/*.h
 
 ## TRoth/20021013: Argh! Why does the fscking %doc directive remove the doc
 ## dir? That's absolutely stupid. We install things there _assuming_ they
@@ -140,12 +162,17 @@ rm -rf ${RPM_BUILD_ROOT}
 %if %{_with_docs}
 %files docs
 %defattr(-,root,root)
-%doc obj-%{_target_platform}/doc/api/avr-libc-user-manual
-%doc obj-%{_target_platform}/doc/api/avr-libc-user-manual.ps.gz
-%doc obj-%{_target_platform}/doc/api/avr-libc-user-manual.pdf.gz
+%{_bindir}/avr-man
+%doc %{ourdocdir}/avr-libc-user-manual
+%doc %{ourdocdir}/avr-libc-user-manual.ps
+%doc %{ourdocdir}/avr-libc-user-manual.pdf
+%doc %{ourdocdir}/man
 %endif
 
 %changelog
+* Mon Nov 14 2005 Galen Seitz <galens@seitzassoc.com>
+- Updated to work with latest tools and build procedure.
+
 * Tue Oct 21 2003 Theodore Roth <troth@openavr.org>
 - Allow disabling build of docs sub-package with "--without docs".
 
